Added C Semaphore Project

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 							<p>As a part of the Datamining course I took, we had to do a project on training a decision tree and manually take the branches of the tree and code a Decision Support System. I trained my tree with a Tic-Tac-Toe dataset from the UCI Repository</p>
 						</div>
 					</section>
+					<section class="feature left">
+						<a href="https://github.com/dandrear1/semaphore-project" class="image icon solid fa-file-code"><img src="images/pic01.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Semaphore Project</h3>
+							<p>This is an assignment I did during my Operating Systems course my final year in school. It demonstrates using semaphores to synchronize two processes. Semaphores prevent a producer from changing a buffer while a consumer is accessing the buffer and vice versa.
+							</p>
+						</div>
+					</section>
 					
 				</div>
 
